# roslearn

./: .env  .env.ci  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package.txt  pm.py
project_utils/: createX11VncPwd.sh  macSetup.sh
roslearn_bringup/: CMakeLists.txt  package.xml
roslearn_bringup/config/: global_config.yaml
roslearn_bringup/launch/: roslearn_bringup.launch
simulation/: CMakeLists.txt  package.xml  urdf_viewer.rviz
simulation/launch/: simulation.launch  view_robot_urdf.launch
simulation/robot_description/urdf/: sphero.urdf
simulation/world/: test_world.sdf
