<?xml version="1.0"?>
<package format="2">
  <name>roslearn_bringup</name>
  <version>0.0.0</version>
  <description>The roslearn_bringup package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
