<?xml version="1.0"?>
<package format="2">
  <name>simulation</name>
  <version>0.0.0</version>
  <description>The simulation package</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/robot_description/meshes"/>
    <gazebo_ros gazebo_media_path="${prefix}/robot_description/meshes"/>
</export>
</package>
